// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Heading Defaults play-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_ppf3o_1 _heading_level1_ppf3o_14  ">
    Heading level 1
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading level 2
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level3_ppf3o_32  ">
    Heading level 3
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level4_ppf3o_41  ">
    Heading level 4
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level5_ppf3o_45  ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading DefaultsMobile smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_ppf3o_1 _heading_level1_ppf3o_14  ">
    Heading level 1
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading level 2
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level3_ppf3o_32  ">
    Heading level 3
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level4_ppf3o_41  ">
    Heading level 4
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level5_ppf3o_45  ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading LevelsWithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_ppf3o_1 _heading_level1_ppf3o_14 _heading_hasSpacingMedium_ppf3o_55 ">
    Heading level 1
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23 _heading_hasSpacingSmallMobileMediumOtherwise_ppf3o_58 ">
    Heading level 2
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level3_ppf3o_32 _heading_hasSpacingSmall_ppf3o_52 ">
    Heading level 3
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level4_ppf3o_41 _heading_hasSpacingSmall_ppf3o_52 ">
    Heading level 4
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level5_ppf3o_45 _heading_hasSpacingExtraSmall_ppf3o_49 ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading LevelsWithSpacingMobile smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_ppf3o_1 _heading_level1_ppf3o_14 _heading_hasSpacingMedium_ppf3o_55 ">
    Heading level 1
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23 _heading_hasSpacingSmallMobileMediumOtherwise_ppf3o_58 ">
    Heading level 2
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level3_ppf3o_32 _heading_hasSpacingSmall_ppf3o_52 ">
    Heading level 3
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level4_ppf3o_41 _heading_hasSpacingSmall_ppf3o_52 ">
    Heading level 4
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level5_ppf3o_45 _heading_hasSpacingExtraSmall_ppf3o_49 ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading WithAs play-test 1`] = `
<div data-test-block="true">
  <h1 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading h1
  </h1>
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading h2
  </h2>
  <h3 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading h3
  </h3>
  <h4 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading h4
  </h4>
  <h5 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading h5
  </h5>
  <h6 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Heading h6
  </h6>
</div>
`;

exports[`Tester/Heading WithAttributes play-test 1`] = `
<div data-test-block="true">
  <h2 id="htmlId"
      class="_heading_ppf3o_1 _heading_level2_ppf3o_23  dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
    Dette er en heading
  </h2>
</div>
`;

exports[`Tester/Heading WithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23 _heading_hasSpacingSmallMobileMediumOtherwise_ppf3o_58 ">
    Dette er den
    <a href="https://skatteetaten.no">
      fyneste markup headingen
    </a>
    <em>
      som finnes i italic
    </em>
    <strong>
      og strong
    </strong>
    <mark>
      mark
    </mark>
    <code>
      code
    </code>
    med spacing under og en skrivefeil
  </h2>
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  ">
    Dette er den fineste string headingen uten markup
  </h2>
</div>
`;

exports[`Tester/Heading WithRef play-test 1`] = `
<div data-test-block="true">
  <h2 class="_heading_ppf3o_1 _heading_level2_ppf3o_23  "
      id="dummyIdForwardedFromRef"
  >
    Dette er en heading
  </h2>
</div>
`;
